# S.T.A.R.-Model-for-Mathematical-and-Theoretical-Physics

./: .gitattributes  .gitignore  .gitmodules  Contributing.md  Dockerfile  README.md  cremona_3selmer_estimates.csv  environment.yml  lmfdb_raw_parsed.csv  parse_cremona_chunks.py  pyproject.toml  requirements.txt  sample_of_cremona_3selmer_estimates.xlsx
.github/workflows/: build-image.yml  ci.yml  notebooks.yml  sky_surveys.yml  test.yml
.ipynb_checkpoints/: pyproject-checkpoint.toml
acsc/: __init__.py  compute_3selmer_from_raw_lmfdb.py  projection.py  quantile.py  statistics.py  tda_pipeline.py
archive/: check_pantheon_plus_dat.py
configs/: planck2018.yaml
data/: DESIDR8_SDSSDR16_SIMBAD.csv  JApJ94494_2MASS_GAIADR3_EPOCH.csv
data/arithmetic/: cremona_3selmer_full_pari.csv
docker/: Dockerfile
docs/: STAR_Model.md
examples/: 04_metric_perturbations.ipynb  06_symbolic_regression_law_discovery.ipynb  cosmology_comparison.ipynb  full_cosmology_inference.ipynb  planck_comparison.ipynb  symbolic_regression_Hz.ipynb
notebooks/: ACSC_Verification.ipynb  full_cosmology_inference.ipynb
scripts/: build_cosmology_data.py  build_ec_dataset.sage  build_ec_dataset_parallel.sage  diff_outputs.py  ec_curvedata.py  generate_cremona_subset.py  generate_pantheon_module_from_csv.py  parse_cremona_chunks.py  parse_lmfdb_raw.py
tests/: test_entropy_field.py  test_hubble_effective.py  test_hubble_tension_fit.py  test_metric_perturbations.py  test_projection.py  test_scalar_coupling.py  test_sr_pipeline.py  test_tda.py
tools/: pantheon_plus_converter.py
(+43 files in other folders)
